--- a/index.html
+++ b/index.html
@@ -92,7 +92,6 @@
   <main class="wrap">
     <header>
       <div class="brand">
-        <div class="logo">AA</div>
         <div>
           <h1>Alireza Amouzad</h1>
           <div class="tag">Machine Learning Engineer — Research + Production</div>
@@ -123,8 +122,8 @@
           </div>
 
           <div style="width:240px;text-align:center">
-            <!-- hero image (local) -->
-            <img src="images/ai_hero.jpg" alt="AI illustration" style="width:100%;border-radius:12px;box-shadow:0 18px 40px rgba(2,6,23,0.6)">
+            <!-- hero image (local) with fallback -->
+            <img src="images/ai_hero.jpg" alt="AI illustration" style="width:100%;border-radius:12px;box-shadow:0 18px 40px rgba(2,6,23,0.6)" onerror="this.src='images/paper.jpg'">
             <div class="small" style="margin-top:8px">AI systems, model lifecycle & deployment</div>
           </div>
         </div>
@@ -140,7 +139,6 @@
       <aside class="reveal">
         <div class="card tilt">
           <div class="meta">
-            <div class="avatar">AA</div>
             <div>
               <div style="font-weight:900">Machine Learning Engineer</div>
               <div class="small">MSc in AI — Amirkabir University • Published: Expert Systems (2024)</div>
@@ -178,7 +176,7 @@
 
         <div class="card pub">
           <div style="flex:1;display:flex;gap:12px;align-items:center">
-            <img src="images/paper.jpg" alt="paper" style="width:92px;height:92px;border-radius:10px;object-fit:cover">
+            <img src="images/paper.jpg" alt="paper" style="width:92px;height:92px;border-radius:10px;object-fit:cover" onerror="this.src='images/ai_hero.jpg'">
             <div>
               <div style="font-weight:900">GIUNet Publication</div>
               <div class="small">Graph Isomorphism U‑Net — Expert Systems With Applications, 2024 • <a href="https://www.sciencedirect.com/science/article/abs/pii/S0957417423017827" target="_blank">Read paper</a></div>
@@ -193,7 +191,7 @@
       <div class="small">Projects pulled from my resume — reproducible repos and demos.</div>
       <div class="grid" style="margin-top:12px">
         <div class="project tilt">
-          <img class="thumb" src="images/image_similarity.jpg" alt="image similarity">
+          <img class="thumb" src="images/image_similarity.jpg" alt="image similarity" onerror="this.src='images/paper.jpg'">
           <h3>Image Similarity Search — SigLIP2 + CLIP</h3>
           <p>Production-ready multimodal retrieval using SigLIP2+CLIP embeddings, Milvus vector store, and MinIO for S3 storage. Async embeddings, batch indexing, FastAPI endpoints and Gradio UI.</p>
           <div class="tech"><span class="tag2">PyTorch</span><span class="tag2">FastAPI</span><span class="tag2">Milvus</span><span class="tag2">Docker</span></div>
@@ -201,7 +199,7 @@
         </div>
 
         <div class="project tilt">
-          <img class="thumb" src="images/giunet.jpg" alt="giunet">
+          <img class="thumb" src="images/paper.jpg" alt="giunet" onerror="this.src='images/ai_hero.jpg'">
           <h3>GIUNet — Graph Isomorphism U‑Net</h3>
           <p>My MSc thesis — a novel U‑Net style GNN with pqPooling achieving strong results on MUTAG, PTC, ENZYMES. Includes training scripts and analysis notebooks.</p>
           <div class="tech"><span class="tag2">PyTorch</span><span class="tag2">PyG</span><span class="tag2">GNN</span></div>
@@ -209,7 +207,7 @@
         </div>
 
         <div class="project tilt">
-          <img class="thumb" src="images/ghazal.jpg" alt="ghazal agent">
+          <img class="thumb" src="images/poetry.jpg" alt="ghazal agent" onerror="this.src='images/paper.jpg'">
           <h3>Persian Ghazal Criticizer Agent</h3>
           <p>An agent built with LangChain and Gradio for automated critique of Persian ghazals — parallel evaluation pipelines and structured outputs.</p>
           <div class="tech"><span class="tag2">LangChain</span><span class="tag2">FastAPI</span><span class="tag2">Gradio</span></div>
@@ -217,7 +215,7 @@
         </div>
 
         <div class="project tilt">
-          <img class="thumb" src="images/rl.jpg" alt="rl games">
+          <img class="thumb" src="images/rl.jpg" alt="rl games" onerror="this.src='images/paper.jpg'">
           <h3>Connect Four &amp; Pentago (RL)</h3>
           <p>Self‑play RL agents trained with DQN-style algorithms and PyTorch; GUI with PyQt for play & visualization.</p>
           <div class="tech"><span class="tag2">RL</span><span class="tag2">PyTorch</span><span class="tag2">Gym</span></div>
@@ -227,7 +225,7 @@
 
       <div style="margin-top:18px" class="card">
         <div style="display:flex;align-items:center;gap:12px">
-          <img src="images/paper.jpg" alt="paper" style="width:92px;height:92px;border-radius:10px;object-fit:cover">
+          <img src="images/paper.jpg" alt="paper" style="width:92px;height:92px;border-radius:10px;object-fit:cover" onerror="this.src='images/ai_hero.jpg'">
           <div>
             <div style="font-weight:900">GIUNet Publication</div>
             <div class="small">Graph Isomorphism U‑Net — Expert Systems With Applications, 2024 • <a href="https://www.sciencedirect.com/science/article/abs/pii/S0957417423017827" target="_blank">Read paper</a></div>
@@ -254,9 +252,9 @@
       </div>
 
       <div class="gallery">
-        <img src="images/medical.jpg" alt="medical imaging">
-        <img src="images/fashion.jpg" alt="fashion-clothes">
-        <img src="images/poetry.jpg" alt="poetry calligraphy">
+        <img src="images/medical.jpg" alt="medical imaging" onerror="this.src='images/paper.jpg'">
+        <img src="images/fashion.jpg" alt="fashion-clothes" onerror="this.src='images/paper.jpg'">
+        <img src="images/mind.jpg" alt="poetry calligraphy" onerror="this.src='images/paper.jpg'">
       </div>
     </section>
 
