better version of site

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
           <div style="width:240px;text-align:center">
             <!-- hero image (local) with fallback -->
             <img src="images/ai_hero.jpg" alt="AI illustration" style="width:100%;border-radius:12px;box-shadow:0 18px 40px rgba(2,6,23,0.6)" onerror="this.src='images/paper.jpg'">
-            <div class="small" style="margin-top:8px">AI systems, model lifecycle & deployment</div>
+            <div class="small" style="margin-top:8px">AI / ML Engineer</div>
           </div>
         </div>
 
