better version of site

--- a/index.html
+++ b/index.html
@@ -150,14 +150,14 @@
           </div>
 
           <div class="intro-image">
-            <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='240' height='240'%3E%3Crect fill='%237c3aed' width='240' height='240'/%3E%3Ctext x='50%25' y='50%25' dominant-baseline='middle' text-anchor='middle' fill='white' font-size='48' font-weight='bold'%3EAI/ML%3C/text%3E%3C/svg%3E" alt="AI illustration">
+            <img src="images/ai_hero.jpg" alt="AI illustration" onerror="this.src='images/paper.jpg'">
             <div class="small" style="margin-top:8px">AI / ML Engineer</div>
           </div>
         </div>
 
         <div class="intro-footer">
           <div class="small">Open-source & writing: <a href="https://medium.com/@a.r.amouzad.m" target="_blank">Medium</a> • <a href="https://ir.linkedin.com/in/alireza-amouzad-71104b82" target="_blank">LinkedIn</a></div>
-          <a class="btn primary" href="#" onclick="alert('Resume download would trigger here');return false">Download Resume</a>
+          <a class="btn primary" href="./Alireza_Amouzad_Resume.pdf" download>Download Resume</a>
         </div>
       </div>
 
@@ -197,7 +197,7 @@
         </div>
 
         <div class="card pub">
-          <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='92' height='92'%3E%3Crect fill='%2306b6d4' width='92' height='92'/%3E%3Ctext x='50%25' y='50%25' dominant-baseline='middle' text-anchor='middle' fill='white' font-size='32' font-weight='bold'%3E📄%3C/text%3E%3C/svg%3E" alt="paper">
+          <img src="images/paper.jpg" alt="paper" onerror="this.src='images/ai_hero.jpg'">
           <div class="pub-content">
             <div>GIUNet Publication</div>
             <div class="small">Graph Isomorphism U‑Net — Expert Systems With Applications, 2024 • <a href="https://www.sciencedirect.com/science/article/abs/pii/S0957417423017827" target="_blank">Read paper</a></div>
@@ -211,7 +211,7 @@
       <div class="small">Projects pulled from my resume — reproducible repos and demos.</div>
       <div class="grid">
         <div class="project">
-          <img class="thumb" src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='300' height='140'%3E%3Crect fill='%237c3aed' width='300' height='140'/%3E%3Ctext x='50%25' y='50%25' dominant-baseline='middle' text-anchor='middle' fill='white' font-size='18' font-weight='bold'%3EImage Similarity%3C/text%3E%3C/svg%3E" alt="image similarity">
+          <img class="thumb" src="images/image_similarity.jpg" alt="image similarity" onerror="this.src='images/paper.jpg'">
           <h3>Image Similarity Search — SigLIP2 + CLIP</h3>
           <p>Production-ready multimodal retrieval using SigLIP2+CLIP embeddings, Milvus vector store, and MinIO for S3 storage. Async embeddings, batch indexing, FastAPI endpoints and Gradio UI.</p>
           <div class="tech"><span class="tag2">PyTorch</span><span class="tag2">FastAPI</span><span class="tag2">Milvus</span><span class="tag2">Docker</span></div>
@@ -219,7 +219,7 @@
         </div>
 
         <div class="project">
-          <img class="thumb" src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='300' height='140'%3E%3Crect fill='%2306b6d4' width='300' height='140'/%3E%3Ctext x='50%25' y='50%25' dominant-baseline='middle' text-anchor='middle' fill='white' font-size='18' font-weight='bold'%3EGIUNet%3C/text%3E%3C/svg%3E" alt="giunet">
+          <img class="thumb" src="images/paper.jpg" alt="giunet" onerror="this.src='images/ai_hero.jpg'">
           <h3>GIUNet — Graph Isomorphism U‑Net</h3>
           <p>My MSc thesis — a novel U‑Net style GNN with pqPooling achieving strong results on MUTAG, PTC, ENZYMES. Includes training scripts and analysis notebooks.</p>
           <div class="tech"><span class="tag2">PyTorch</span><span class="tag2">PyG</span><span class="tag2">GNN</span></div>
@@ -227,7 +227,7 @@
         </div>
 
         <div class="project">
-          <img class="thumb" src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='300' height='140'%3E%3Crect fill='%239333ea' width='300' height='140'/%3E%3Ctext x='50%25' y='50%25' dominant-baseline='middle' text-anchor='middle' fill='white' font-size='18' font-weight='bold'%3EPoetry Agent%3C/text%3E%3C/svg%3E" alt="ghazal agent">
+          <img class="thumb" src="images/poetry.jpg" alt="ghazal agent" onerror="this.src='images/paper.jpg'">
           <h3>Persian Ghazal Criticizer Agent</h3>
           <p>An agent built with LangChain and Gradio for automated critique of Persian ghazals — parallel evaluation pipelines and structured outputs.</p>
           <div class="tech"><span class="tag2">LangChain</span><span class="tag2">FastAPI</span><span class="tag2">Gradio</span></div>
@@ -235,7 +235,7 @@
         </div>
 
         <div class="project">
-          <img class="thumb" src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='300' height='140'%3E%3Crect fill='%2314b8a6' width='300' height='140'/%3E%3Ctext x='50%25' y='50%25' dominant-baseline='middle' text-anchor='middle' fill='white' font-size='18' font-weight='bold'%3ERL Games%3C/text%3E%3C/svg%3E" alt="rl games">
+          <img class="thumb" src="images/rl.jpg" alt="rl games" onerror="this.src='images/paper.jpg'">
           <h3>Connect Four &amp; Pentago (RL)</h3>
           <p>Self‑play RL agents trained with DQN-style algorithms and PyTorch; GUI with PyQt for play & visualization.</p>
           <div class="tech"><span class="tag2">RL</span><span class="tag2">PyTorch</span><span class="tag2">Gym</span></div>
@@ -262,9 +262,9 @@
       </div>
 
       <div class="gallery">
-        <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='200' height='140'%3E%3Crect fill='%23dc2626' width='200' height='140'/%3E%3Ctext x='50%25' y='50%25' dominant-baseline='middle' text-anchor='middle' fill='white' font-size='16' font-weight='bold'%3EMedical%3C/text%3E%3C/svg%3E" alt="medical imaging">
-        <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='200' height='140'%3E%3Crect fill='%23ea580c' width='200' height='140'/%3E%3Ctext x='50%25' y='50%25' dominant-baseline='middle' text-anchor='middle' fill='white' font-size='16' font-weight='bold'%3EFashion%3C/text%3E%3C/svg%3E" alt="fashion-clothes">
-        <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='200' height='140'%3E%3Crect fill='%235b21b6' width='200' height='140'/%3E%3Ctext x='50%25' y='50%25' dominant-baseline='middle' text-anchor='middle' fill='white' font-size='16' font-weight='bold'%3EPoetry%3C/text%3E%3C/svg%3E" alt="poetry calligraphy">
+        <img src="images/medical.jpg" alt="medical imaging" onerror="this.src='images/paper.jpg'">
+        <img src="images/fashion.jpg" alt="fashion-clothes" onerror="this.src='images/paper.jpg'">
+        <img src="images/mind.jpg" alt="poetry calligraphy" onerror="this.src='images/paper.jpg'">
       </div>
     </section>
 
@@ -276,7 +276,7 @@
           <div>Email</div>
           <div class="small">a.r.amouzad.m@gmail.com</div>
           <div style="margin-top:12px;font-weight:900;font-size:clamp(13px,3vw,15px)">Resume</div>
-          <a class="btn primary" href="#" onclick="alert('Resume download');return false" style="margin-top:8px;display:inline-block">Download Full Resume</a>
+          <a class="btn primary" href="./Alireza_Amouzad_Resume.pdf" download style="margin-top:8px;display:inline-block">Download Full Resume</a>
         </div>
 
         <div class="contact-card">
@@ -307,7 +307,7 @@
     reveals.forEach(r=>io.observe(r));
 
     // small keyboard shortcut: press 'r' to download resume
-    window.addEventListener('keydown', (e)=>{ if(e.key==='r'){ alert('Resume download would trigger here') } })
+    window.addEventListener('keydown', (e)=>{ if(e.key==='r'){ window.location.href='./Alireza_Amouzad_Resume.pdf' } })
   </script>
 </body>
 </html>
